tests/NormalTests/paczka1/small_fuzzy/31576149.err
Error in line 3: WWGUhHj S707 59,5
Error in line 7: HdrC3uHuxY S745 40,3
